Added A css class

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=!, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -23,15 +25,15 @@
         <h1>
         Education
         <p>
-            The University of California, San Diego                                                               
-            Bachelor’s of Arts in Global Health
-            Interdisciplinary intellectual synthesis aimed at understanding and productively intervening in processes of health, illness, and healing across the globe. Gained an in-depth understanding of factors related to illness, health, and healing from a comparative and interdisciplinary perspective that transcends national borders and regional interests, and takes cultural difference and cross-cultural diversity fully into account. 
-            Completed relevant upper-division courses in project management advanced data structures and theory of computation within the computer science department.
-            Relevant Course work :
-           CSE 12- OOP Programming And Basic Data Structures
-           CSE 21- Mathematics For Algorithm Analysis
-           CSE 105- Theory Of Computation
-           CSE 100 -Advanced Data Structures with C++  
+        The University of California, San Diego                                                               
+        Bachelor’s of Arts in Global Health
+        Interdisciplinary intellectual synthesis aimed at understanding and productively intervening in processes of health, illness, and healing across the globe. Gained an in-depth understanding of factors related to illness, health, and healing from a comparative and interdisciplinary perspective that transcends national borders and regional interests, and takes cultural difference and cross-cultural diversity fully into account. 
+        Completed relevant upper-division courses in project management advanced data structures and theory of computation within the computer science department.
+        Relevant Course work :
+        CSE 12- OOP Programming And Basic Data Structures
+        CSE 21- Mathematics For Algorithm Analysis
+        CSE 105- Theory Of Computation
+        CSE 100 -Advanced Data Structures with C++  
         </p>
         </h1>
      <h1>
