--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
     <title>Portfolio</title>
 </head>
 <body>
-  <section>
-    <h1>Tabor Wondimu</h1>
-    <img src="Images/banner.jpg.jpg" alt="Image Currently Unavailable">
+   <h1>Tabor Wondimu</h1>
+    <img src="Images/IMG-5352.JPG" alt="Image Currently Unavailable"
+    width = "500px", height="500px">
     <p>
     My name is Tabor Wondimu, I am from Ethiopia. I attended the University of California, San Diego, where I obtained my Bachelor's in Global Health. While majoring in Global Health, I was exposed to different programming languages and computational concepts
     such as C++, Discrete Math and Java. I was eager to further my skillset in the software field so I ended up taking advanced computer science courses in theory of computation and data structures. Upon graduating
     I enrolled in TrueCoders where I learned the fundemenatals of Full-Stack Software Engineering using C#, SQL, ASP.Net, CSS, HTML, JavaScript and .NET Core.
-    </p>
-</section>  
+    </p>  
 <ul>
+    <p>Contact Me</p>
     <li><a href="tel:925-565-5183">925-565-5183</a></li>
     <li><a href="mailto:csmajortabor@gmail.com">csmajortabor@gmail.com</a></li>
-    <section>
-        <h1>
-        Education
+</ul>
+</body>
+        <h2> Education </h2>
+        <p1>
+        UC San Diego,                                                               
+        BA Global Health
+        </p1>
         <p>
-        The University of California, San Diego                                                               
-        Bachelor’s of Arts in Global Health
         Interdisciplinary intellectual synthesis aimed at understanding and productively intervening in processes of health, illness, and healing across the globe. Gained an in-depth understanding of factors related to illness, health, and healing from a comparative and interdisciplinary perspective that transcends national borders and regional interests, and takes cultural difference and cross-cultural diversity fully into account. 
         Completed relevant upper-division courses in project management advanced data structures and theory of computation within the computer science department.
         Relevant Course work :
@@ -35,36 +37,35 @@
         CSE 105- Theory Of Computation
         CSE 100 -Advanced Data Structures with C++  
         </p>
-        </h1>
-     <h1>
-        ContinuM - Software Development Consultant
-         <p>
+        <h2>Experience</h2>
+        <p1>
+        ContinuM - Software Development Consultant  
+        </p1>
+        <p>
            Used web developing languages such as HTML, Knockout.js, and CSS to design a prototype for a webpage as well as a mobile application. 
            Used Knockout.js to design a webpage with a hovering auto-play video that displays the functions and different attributes of the webpage.
            Consulted the startup on marketing strategies and market assessment using comparative tools to conduct various research on potential users.
            Worked alongside my peers to design a contract, binding ourselves and the company in regards to the specific tasks we will be completing as well as our project-based pay.
         </p>
-     </h1>
-     <h1>
-        VerityStream - A Healthstream Company
+       <p1>VerityStream - A Healthstream Company</p1>
          <p>
             Used Microsoft SQL (MySQL) and Excel to perform data entry, data search, data removing, data validation, and adding data of clients across the platform by writing various scripts.
             Clients included hospitals, medical schools, medical professionals, and insurance companies. I would complete a thorough analysis of these entities and completed an excel worksheet noting the results and then updating them within the companies database.
             Assigned various specific codes to companies and schools as well as individuals, in accordance with the guideline set by VerityStream. This was referred to as code conversion.
             Worked alongside the software engineering team to upload client details and updates into servers. This was completed by submitting an excel sheet to the software engineering team with lists of entities that either needed to be added, deleted, or updated within the company system.
         </p>
-     </h1>
     </section>
     <section>
-        <h1>
+        <h3>
          Projects    
         <ul>
             <ul>
                 <li><a href=https://github.com/TaborWondimu>Github</a></a></li>
             </ul>
         </ul>
-        </h1>
+        </h3>
     </section>
 </ul>
-</body>
+
+
 </html>
